# TensorRT-LibTorch-Env

./: .gitignore  CMakeLists.txt  Dockerfile  InferenceEngine.hpp  README.md  main.cpp
models/: README.md  Test.py  export_engine.py
